less/cover.less
.cover {
	display: none;
	position: relative;
	background-color: #2b2b2b;
	background-image: -webkit-gradient(linear,50% 0,50% 100%,color-stop(0%,#2b2b2b),color-stop(100%,#000));
	background-image: -webkit-linear-gradient(#2b2b2b,#000);
	background-image: -moz-linear-gradient(#2b2b2b,#000);
	background-image: -o-linear-gradient(#2b2b2b,#000);
	background-image: linear-gradient(#2b2b2b,#000);
	height: 100%;
	width: 100%;
	overflow: hidden;
	z-index: 1;
}
.cover.show {
	overflow: visible;
}
.cover.auto {
	height: auto;
	padding: 50px 0;
}
.cover.home {
	padding-top: 66px;
}
.cover.auto.home {
	height: 450px;
}
@media screen and (max-width: 595px) {
	.cover,
	.cover.auto {
		height: auto;
		min-height: 0;
		padding: 40px 0;
	}
}
.cover.featured-image {
	display: block;
}

.cover .background {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	opacity: .6;
	background-color: #355264;
	background-size: cover;
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
}
.cover.auto .background {
	background-attachment: scroll;
}
.cover .background.darken {
	opacity: 0.1;
}
@media screen and (max-width: 595px) {
	.cover .background {
		background-attachment: scroll;
	}
}

.cover header {
	position: relative;
	width: 90%;
	top: 20%;
	max-width: 760px;
	margin: 0 auto;
	left: auto;
}
@media screen and (max-width: 595px) {
	.cover header {
		padding: 80px 0 20px;
	}
}
@media screen and (max-height: 640px) {
	.cover header {
		top: 5%;
	}
}
.cover.home header {
	top: auto;
}

.cover header h1 {
	color: #fff;
	font: 700 3.6em Domine,Serif;
	line-height: 86px;
	text-shadow: 0 0 30px rgba(0,0,0,.8);
}
.cover header h1 a {
	color: #fff;
}
@media screen and (max-width: 595px) {
	.cover header h1 {
		font-size: 3.1em;
		line-height: 22px;
	}
}
.cover header h1 a:hover {
	border-bottom: 3px solid rgba(255,255,255,0.2);
}

.cover header h2 {
	font: 600 22px 'Open Sans',Serif;
	color: #dedede;
}

.cover header h2 a {
	color: #dedede;
}
.cover header h2 a:hover {
	border-bottom: 2px solid #dedede;
}

.cover header p {
	color: #dedede;
	opacity: 0.9;
}

.cover header span {
	color: #dedede;
}

.cover header span a,
.cover header span time,
.cover header .entry-summary a {
	color: #fff;
}
.cover header span a:hover,
.cover header .entry-summary a:hover {
	border-bottom: 2px solid #fff;
}

// scroller
.cover .fa-angle-down {
	position: absolute;
	bottom: 0;
	color: #fff;
	left: 0;
	right: 0;
	cursor: pointer;
	font-size: 60px;
	margin: auto;
	width: 40px;
}
@media screen and (max-width: 595px) {
	.cover .fa-angle-down {
		display: none;
	}
}

